# anime-scrapper

./: Cargo.toml  index.html
src/: main.rs  parser.rs
